backend/src/inbound/ws/snapshots/backend__inbound__ws__messages__tests__serialises_invalid_display_name_event.snap
---
source: backend/src/inbound/ws/messages.rs
expression: envelope
---
{
  "traceId": "00000000-0000-0000-0000-000000000000",
  "code": "invalid_chars",
  "error": "Invalid display name. Only alphanumeric characters, spaces, and underscores are allowed. Length must be between 3 and 32 characters.",
  "details": {
    "field": "displayName",
    "value": "bad$char",
    "message": "Invalid display name. Only alphanumeric characters, spaces, and underscores are allowed. Length must be between 3 and 32 characters.",
    "code": "invalid_chars"
  }
}
