backend/src/inbound/ws/snapshots/backend__inbound__ws__messages__tests__serializes_invalid_display_name_event.snap
---
source: backend/src/inbound/ws/messages.rs
expression: response
---
{
  "traceId": "00000000-0000-0000-0000-000000000000",
  "code": "invalid_chars",
  "error": "Only alphanumeric characters, spaces, and underscores are allowed.",
  "details": {
    "field": "displayName",
    "value": "bad$char",
    "message": "Only alphanumeric characters, spaces, and underscores are allowed.",
    "code": "invalid_chars"
  }
}
