backend/src/inbound/ws/snapshots/backend__inbound__ws__messages__tests__serializes_user_created_event.snap
---
source: backend/src/inbound/ws/messages.rs
expression: response
---
{
  "traceId": "00000000-0000-0000-0000-000000000000",
  "id": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
  "displayName": "Alice"
}
